--- a/CRUD/views/heroes/add.ejs
+++ b/CRUD/views/heroes/add.ejs
@@ -23,14 +23,14 @@
   </nav>
   <div class="container-me">
     <h1 class="title-me mt-3 mb-3"> Add Hero</h1>
-    <form action="/heroes/store" method="POST" class="container">
+    <form action="/store" method="POST" class="container">
       <div class="mb-3">
         <label class="form-label" >Nama Hero</label>
         <input value="<%=name%>" name="namahero" type="text" class="form-control" id="" placeholder="nama hero">
       </div>
       <div class="mb-3">
         <label for="" class="form-label">Ability</label>
-        <input value="<%=idType%>" name="ability" type="text" class="form-control" id="" placeholder="Ability hero">
+        <input value="<%=id%>" name="ability" type="text" class="form-control" id="" placeholder="Ability hero">
       </div>
       <div class="mb-3">
         <label for="" class="form-label">Photo Hero</label>
