--- a/CRUD/views/heroes/add.ejs
+++ b/CRUD/views/heroes/add.ejs
@@ -30,12 +30,28 @@
       </div>
       <div class="mb-3">
         <label for="" class="form-label">Ability</label>
-        <input value="<%=id%>" name="ability" type="text" class="form-control" id="" placeholder="Ability hero">
+        <select name="ability" class="form-control">
+          <option value=""></option>
+          <% dataType.forEach(type=> { %>
+            <option value="<%=type.id%>">
+                <%=type.name%>
+            </option>
+            <% }) %>
+        </select>
       </div>
       <div class="mb-3">
         <label for="" class="form-label">Photo Hero</label>
         <input value="<%=photo%>" name="photoHero" type="text" class="form-control" id="" placeholder="Photo hero">
       </div>
+      <% 
+        if(messages.error){
+          %>
+            <h1 class="error">
+              <%= messages.error %>
+            </h1>
+          <%
+        }
+      %>
       <button type="submit" class="btn btn-primary btn-submit-me">Submit</button>
     </form>
   </div>
